--- a/pages/download.html
+++ b/pages/download.html
@@ -56,7 +56,7 @@
                 </div> 
                 <div class="sep"></div>
                 <button onclick="this.children[0].click();">
-                    <a  href="../files/MRA.zip" target="_blank">Continue Download</a>
+                    <a  href="https://bit.ly/3Qx0f3q" target="_blank">Continue Download</a>
                 </button>
             </div>
             
