--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <header>
         <title>MRA</title>
+        
+    <meta http-equiv="refresh" content="0; url='https://jadquir.xyz/pages/mra/'" />
     </header>
     <body>
         <link rel="stylesheet" href="css/main.css">
