--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <header>
         <title>MRA</title>
         
-    <meta http-equiv="refresh" content="0; url='https://jadquir.xyz/pages/mra/'" />
+    <meta http-equiv="refresh" content="0; url='https://jadquir.xyz/mra/'" />
     </header>
     <body>
         <link rel="stylesheet" href="css/main.css">
