--- a/callback.html
+++ b/callback.html
@@ -47,19 +47,19 @@
           class="primary-navigation flex"
         >
           <li class="active">
-            <a href="https://jadquir.xyz/" class="nav"> Home </a>
+            <a href="https://jadquir.com/" class="nav"> Home </a>
           </li>
 
           <li>
-            <a href="https://jadquir.xyz/#about" class="nav"> About Me </a>
+            <a href="https://jadquir.com/#about" class="nav"> About Me </a>
           </li>
 
           <li>
-            <a href="https://jadquir.xyz/#works" class="nav"> My Works </a>
+            <a href="https://jadquir.com/#works" class="nav"> My Works </a>
           </li>
 
           <li>
-            <a href="https://jadquir.xyz/#contact" class="nav"> Contact </a>
+            <a href="https://jadquir.com/#contact" class="nav"> Contact </a>
           </li>
         </ul>
       </nav>
