--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
   <body style="background-image: none">
     <header class="primary-header flex" id="navContainer" style="text-shadow: 0px 0px 4px black, 3px 6px 20px black, 0px 0px 11px black, 0px 0px 20px black;">
       <div class="holder1">
-        <a href="https://jadquir.xyz/" class="logo"></a>
+        <a href="https://jadquir.com/" class="logo"></a>
         <button
           class="nav-toggle no-button"
           aria-controls="primary-navigation"
@@ -48,19 +48,19 @@
           class="primary-navigation flex"
         >
           <li class="active">
-            <a href="https://jadquir.xyz/" class="nav"> Home </a>
+            <a href="https://jadquir.com/" class="nav"> Home </a>
           </li>
 
           <li>
-            <a href="https://jadquir.xyz/#about" class="nav"> About Me </a>
+            <a href="https://jadquir.com/#about" class="nav"> About Me </a>
           </li>
 
           <li>
-            <a href="https://jadquir.xyz/#works" class="nav"> My Works </a>
+            <a href="https://jadquir.com/#works" class="nav"> My Works </a>
           </li>
 
           <li>
-            <a href="https://jadquir.xyz/#contact" class="nav"> Contact </a>
+            <a href="https://jadquir.com/#contact" class="nav"> Contact </a>
           </li>
         </ul>
       </nav>
