--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
-    <link rel="icon" type="image/gif/png" href="images/logo.png" />
-    <link itemprop="image" href="images/logo.png" />
+    <link rel="icon" type="image/gif/png" href="./images/logo.png" />
+    <link itemprop="image" href="./images/logo.png" />
     <title>MRA - Jadquir</title>
     <meta
       name="description"
