--- a/music.html
+++ b/music.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
-    <link rel="icon" type="image/gif/png" href="images/logo.png" />
-    <link itemprop="image" href="images/logo.png" />
+    <link rel="icon" type="image/gif/png" href="./images/logo.png" />
+    <link itemprop="image" href="./images/logo.png" />
   </head>
   <body style="background-image: none">
     <header class="primary-header flex" id="navContainer" style="text-shadow: 0px 0px 4px black, 3px 6px 20px black, 0px 0px 11px black, 0px 0px 20px black;">
