--- a/callback.html
+++ b/callback.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="images/logo.png" />
-    <link itemprop="image" href="images/logo.png" />
+    <link itemprop="image" href="./images/logo.png" />
   </head>
   <body onload="loadEvent()" style="background-image: none">
     <header class="primary-header flex" id="navContainer">
