added  new links

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               >*Windows 64-bit (With Auto Updater):</span
             >
             <a
-              href="downloads/1.05/64/MRA_Setup.msi"
+              href="https://jadquir.com/mra/downloads/1.05/64/MRA_Setup.msi"
               class="button accent primary margin download-link"
               target="_blank"
               >Download</a
@@ -221,7 +221,7 @@
           <div class="download-button">
             <span class="download-text">Windows 32-bit :</span>
             <a
-              href="downloads/1.05/32/MRA_Setup.msi"
+              href="https://jadquir.com/mra/downloads/1.05/32/MRA_Setup.msi"
               class="button accent primary margin download-link"
               target="_blank"
               >Download</a
