--- a/callback.html
+++ b/callback.html
@@ -22,6 +22,11 @@
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="images/logo.png" />
     <link itemprop="image" href="./images/logo.png" />
+    <meta property="og:description" content="MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.
+    MRA listens to your microphone or the desktop sound and identifies the music and then gives you information about the music you found like title, artist, album, genre, etc. You can listen to the music on different platforms, see lyrics, see similar kinds of music, and much more.">
+    <meta property="og:image" content="./images/logo.png">
+    <meta property="og:url" content="https://mra.jadquir.com">
+    <meta property="og:type" content="website">
   </head>
   <body onload="loadEvent()" style="background-image: none">
     <header class="primary-header flex" id="navContainer">
