--- a/music/index.html
+++ b/music/index.html
@@ -15,14 +15,14 @@
     />
     <title>MRA - Music Identifier - Music Discovery</title>
 
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
-    <link rel="stylesheet" type="text/css" href="styles/music.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/music.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/nav.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
-    <link rel="icon" type="image/gif/png" href="./images/logo.png" />
-    <link itemprop="image" href="./images/logo.png" />
+    <link rel="icon" type="image/gif/png" href="../images/logo.png" />
+    <link itemprop="image" href="../images/logo.png" />
     <meta property="og:description" content="This is the song share page for MRA - Music Identifier - Music Discovery. Click the link to see the song. MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.
     MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.">
     <meta property="og:image" content="./images/logo.png">
@@ -86,7 +86,7 @@
                         </svg>
                         <span>Open in MRA</span>
                     </a>
-                    <a class="button open-mra accent" href="/#download" >
+                    <a class="button open-mra accent" href="../#download" >
                         <svg  class="external-link-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
                             <path id="Vector" d="M6 21H18M12 3V17M12 17L17 12M12 17L7 12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </g>
@@ -109,6 +109,6 @@
       reserved.
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="shazam.js"></script>   
+    <script src="../shazam.js"></script>   
   </body>
 </html>
