--- a/index.html
+++ b/index.html
@@ -483,7 +483,8 @@
               target="_blank"
               >Download</a
             > -->
-            <a class="button accent primary download-link icon-button stroked" href="https://jadquir.com/mra/downloads/1.05/64/MRA_Setup.msi">
+            <a class="button accent primary download-link icon-button stroked"
+            target="_blank" href="https://jadquir.com/mra/downloads/1.05/64/MRA_Setup.msi">
               <svg xmlns="http://www.w3.org/2000/svg" width="800px" style="--w: 30px" height="800px" viewBox="0 0 24 24" fill="none">
                 <path d="M17 12L12 17M12 17L7 12M12 17V4M17 20H7" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
@@ -502,7 +503,8 @@
               target="_blank"
               >Download</a
             > -->
-            <a class="button accent primary download-link icon-button stroked" href="https://jadquir.com/mra/downloads/1.05/32/MRA_Setup.msi">
+            <a class="button accent primary download-link icon-button stroked"
+            target="_blank" href="https://jadquir.com/mra/downloads/1.05/32/MRA_Setup.msi">
               <svg xmlns="http://www.w3.org/2000/svg" width="800px" style="--w: 30px" height="800px" viewBox="0 0 24 24" fill="none">
                 <path d="M17 12L12 17M12 17L7 12M12 17V4M17 20H7" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>
