changed playlist url

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       type="text/javascript"
       defer
     ></script>
+    <link rel="canonical" href="https://mra.jadquir.com/" />
     <link rel="icon" type="image/gif/png" href="./images/logo.png" />
     <link itemprop="image" href="./images/logo.png" />
     <title>MRA - Music Identifier - Music Discovery | Jadquir</title>
