--- a/playlist/index.html
+++ b/playlist/index.html
@@ -84,7 +84,7 @@
                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </g>
                         </svg>
-                        <span>Open in MRA</span>
+                        <span>Save to MRA</span>
                     </a>
                     <a class="button open-mra accent" href="../#download" >
                         <svg  class="external-link-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
