--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
     />
     <meta
       property="og:image"
-      content="https://mra.jadquir.com/images/logo.png"
-    />
+      content="https://mra.jadquir.com/images/logo_low.png"
+    /> <meta
+    property="og:image:width"
+    content="150"
+  /> <meta
+  property="og:image:height"
+  content="150"
+/>
     <meta property="og:url" content="https://mra.jadquir.com" />
     <meta property="og:type" content="website" />
     <meta
