removed error debug message from gifts

--- a/gift.html
+++ b/gift.html
@@ -131,7 +131,7 @@
         <div class="progress-bar">
           <div class="progress-bar-value"></div>
         </div>
-        <span id="error_text" class="glow">Error will be shown like this</span>
+        <span id="error_text" class="glow"></span>
         <dialog id="dialog"></dialog>
       </div>
     </section>
