added web image

--- a/callback.html
+++ b/callback.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/nav.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
+    <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="images/logo.png" />
