added web image

--- a/music/index.html
+++ b/music/index.html
@@ -28,6 +28,7 @@
     <meta property="og:image" content="./images/logo.png">
     <meta property="og:url" content="https://mra.jadquir.com">
     <meta property="og:type" content="website">
+    <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
   </head>
   <body style="background-image: none">
     <header class="primary-header flex" id="navContainer" style="text-shadow: 0px 0px 4px black, 3px 6px 20px black, 0px 0px 11px black, 0px 0px 20px black;">
