--- a/playlist/index.html
+++ b/playlist/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
+    <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
     <link rel="icon" type="image/gif/png" href="../images/logo.png" />
     <link itemprop="image" href="../images/logo.png" />
     <meta property="og:description" content="This is the playlist share page for MRA. Click the link to see the playlist. MRA (short for Music Recognition Application) is a music recognition application, or music identifier, like Shazam but for PC.">
