--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
     />
     <title>Page Not Found - MRA</title>
 
+    <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="styles/music.css" />
     <link
