--- a/gift.html
+++ b/gift.html
@@ -15,6 +15,7 @@
     />
     <title>MRA - Gift</title>
 
+    <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="stylesheet" type="text/css" href="styles/gift.css" />
     <link
