--- a/playlist.html
+++ b/playlist.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/nav.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/button.css" />
     <link rel="stylesheet" type="text/css" href="https://jadquir.com/style/common.css" />
+    <link rel="icon" type="image/png" href="images/logo_low.png" sizes="150x150">
     <script src="https://jadquir.com/scripts/navbar.js" type="text/javascript" defer></script>
     <link rel="icon" type="image/gif/png" href="./images/logo.png" />
     <link itemprop="image" href="./images/logo.png" />
