--- a/gift.html
+++ b/gift.html
@@ -98,7 +98,7 @@
       </nav>
     </header>
     <div id="bg-image"></div>
-    <section class="main-container">
+    <section class="main-container" style="width: 95% !important">
       <div id="gift-contaner">
         <span>You have a gift!</span>
         <span id="gifts">You will get Tier 1 for 31 days!</span>
