mra new 1.06 version

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           </div> -->
           <div class="download-button">
             <span class="download-text"
-              >*Windows 64-bit (With Auto Updater):</span
+              >*Windows:</span
             >
             <!-- <a
               href="https://jadquir.com/mra/downloads/1.05/64/MRA_Setup.msi"
@@ -503,7 +503,7 @@
             <a
               class="button accent primary download-link icon-button stroked"
               target="_blank"
-              href="https://jadquir.com/mra/downloads/1.05/64/MRA_Setup.msi"
+              href="https://jadquir.com/mra/downloads/1.06/MRA_Setup.msi"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -527,14 +527,9 @@
             > -->
           </div>
 
-          <div class="download-button">
+          <!-- <div class="download-button">
             <span class="download-text">Windows 32-bit :</span>
-            <!-- <a
-              href="https://jadquir.com/mra/downloads/1.05/32/MRA_Setup.msi"
-              class="button accent primary margin download-link"
-              target="_blank"
-              >Download</a
-            > -->
+          
             <a
               class="button accent primary download-link icon-button stroked"
               target="_blank"
@@ -556,11 +551,10 @@
                 ></path>
               </svg>
               <span class="button-text">Download</span>
-            </a>
-            <!-- <a href="#" class="button accent transparent" download
+            </a> <a href="#" class="button accent transparent" download
               >Download Zip</a
-            > -->
-          </div>
+            > 
+          </div> -->
           <script>
             const elements = document.querySelectorAll(
               ".download-button > .download-text"
