--- a/callback.html
+++ b/callback.html
@@ -32,7 +32,7 @@
   <body onload="loadEvent()" style="background-image: none">
     <header class="primary-header flex" id="navContainer">
       <div class="holder1">
-        <a href="https://jadquir.xyz/" class="logo"></a>
+        <a href="https://jadquir.com/" class="logo"></a>
         <button
           class="nav-toggle no-button"
           aria-controls="primary-navigation"
