--- a/index.html
+++ b/index.html
@@ -670,21 +670,14 @@
           fill: #ffdd00;
         }
       </style>
-      <section class="downloads" id="download">
-        <h1>Downloads</h1>
-        <div class="download-container">
-          <span class="recom-text">* is Recommended</span>
-          <div class="download-button">
-            <span class="download-text"
-              >*Windows (v0.107.2) (Latest Version):</span
-            >
+      
             <!-- <a
               href="https://jadquir.com/mra/downloads/1.05/64/MRA_Setup.msi"
               class="button accent primary margin download-link"
               target="_blank"
               >Download</a
             > -->
-            <script>
+            <!-- <script>
               var currentUrl =
                 "https://mra.jadquir.com/downloads/1.07.2/MRA_Setup.msi";
               const fetchUrl =
@@ -709,12 +702,51 @@
                   };
                 }
               });
-            </script>
+            </script> -->
+      <section class="downloads" id="download">
+        <h1>Downloads</h1>
+        <div class="download-container">
+          <span class="recom-text">* is Recommended</span>
+          <div class="download-button">
+            <span class="download-text"
+              >*Windows Installer (v0.107.3) (Latest Version):</span
+            >
             <a
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://mra.jadquir.com/downloads/1.07.2/MRA_Setup.msi"
+              href="https://dl.dropboxusercontent.com/scl/fi/4j4w96yfjxnr34tmbd5cm/MRA_Setup.msi?rlkey=x64uwj20xf7nnrdrk7588vzx7&dl=0"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="800px"
+                style="--w: 30px"
+                height="800px"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M17 12L12 17M12 17L7 12M12 17V4M17 20H7"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg>
+              <span class="button-text">Download</span>
+            </a>
+            <!-- <a href="#" class="button accent transparent" download
+              >Download Zip</a
+            > -->
+          </div>
+          <div class="download-button">
+            <span class="download-text"
+              >*Windows Zip File (v0.107.3) (Latest Version):</span
+            >
+            <a
+              class="button accent primary download-link icon-button stroked"
+              target="_blank"
+              id="download-url"
+              href="https://dl.dropboxusercontent.com/scl/fi/pbm8ktj40xtxeli9h8lle/MRA.zip?rlkey=d0s7hio6lfxm7wy5szbww75i3&dl=0"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -785,7 +817,8 @@
             > 
           </div> -->
           <script>
-            const elements = document.querySelectorAll(
+            window.addEventListener("load",()=>{
+              const elements = document.querySelectorAll(
               ".download-button > .download-text"
             );
             let maxWidth = 0;
@@ -799,6 +832,8 @@
             for (let element of elements) {
               element.style.minWidth = `${maxWidth}px`;
             }
+            });
+           
           </script>
         </div>
       </section>
