updated download url

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://dl.dropboxusercontent.com/scl/fi/4j4w96yfjxnr34tmbd5cm/MRA_Setup.msi?rlkey=x64uwj20xf7nnrdrk7588vzx7&dl=0"
+              href="https://raw.githubusercontent.com/Jadquir/mra-files/main/updates/0.107.3/MRA_Setup.msi"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -746,7 +746,7 @@
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://dl.dropboxusercontent.com/scl/fi/pbm8ktj40xtxeli9h8lle/MRA.zip?rlkey=d0s7hio6lfxm7wy5szbww75i3&dl=0"
+              href="https://raw.githubusercontent.com/Jadquir/mra-files/main/updates/0.107.3/MRA.zip"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
