updated download url from repo to release

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://raw.githubusercontent.com/Jadquir/mra-files/main/updates/0.107.3/MRA_Setup.msi"
+              href="https://github.com/Jadquir/mra-files/releases/download/0.107.3/MRA_Setup.msi"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -746,7 +746,7 @@
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://raw.githubusercontent.com/Jadquir/mra-files/main/updates/0.107.3/MRA.zip"
+              href="https://github.com/Jadquir/mra-files/releases/download/0.107.3/MRA.zip"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
