added caution for the virus alert

--- a/index.html
+++ b/index.html
@@ -707,6 +707,11 @@
         <h1>Downloads</h1>
         <div class="download-container">
           <span class="recom-text">* is Recommended</span>
+          <span class="recom-text" style="color: var(--warning); text-align: center; 
+          font-weight: 700;
+          font-size: larger;">
+            Caution!<br>
+            Certain antivirus programs flag the auto updater as a trojan, despite it being completely safe.<br></span>
           <div class="download-button">
             <span class="download-text"
               >*Windows Installer (v0.107.3) (Latest Version):</span
