--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     ></script>
   </head>
   <body>
+ /* <span>test</span>*/
     <header class="primary-header flex" id="navContainer">
       <div class="holder1">
         <a
@@ -711,16 +712,23 @@
           font-weight: 700;
           font-size: larger;">
             Caution!<br>
-            Certain antivirus programs flag the auto updater as a trojan, despite it being completely safe.<br></span>
+            Certain antivirus programs flag the auto updater as a trojan, despite it being completely safe.<br>
+            You can download Auto Updater separately if you want it.
+            <br></span> 
+            <span class="recom-text" style="color: var( --info); text-align: center; 
+            font-weight: 700;
+            font-size: larger;">
+              The Microsoft version is no longer being updated. You can find the announcement <a href="https://bit.ly/mra-announcement-2">here</a>.
+              <br></span>
           <div class="download-button">
             <span class="download-text"
-              >*Windows Installer (v0.107.3) (Latest Version):</span
+              >*Windows Installer (v0.108.0) (Latest Version):</span
             >
             <a
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://github.com/Jadquir/mra-files/releases/download/0.107.3/MRA_Setup.msi"
+              href="https://github.com/Jadquir/mra-files/releases/download/0.108.0/MRA_Setup.msi"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -745,13 +753,13 @@
           </div>
           <div class="download-button">
             <span class="download-text"
-              >*Windows Zip File (v0.107.3) (Latest Version):</span
+              >*Windows Zip File (v0.108.0) (Latest Version):</span
             >
             <a
               class="button accent primary download-link icon-button stroked"
               target="_blank"
               id="download-url"
-              href="https://github.com/Jadquir/mra-files/releases/download/0.107.3/MRA.zip"
+              href="https://github.com/Jadquir/mra-files/releases/download/0.108.0/MRA_v01080.zip"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -774,7 +782,37 @@
               >Download Zip</a
             > -->
           </div>
-
+          <div class="download-button">
+            <span class="download-text"
+              >*Auto MRA Updater:</span
+            >
+            <a
+              class="button accent primary download-link icon-button stroked"
+              target="_blank"
+              id="download-url"
+              href="https://github.com/Jadquir/mra-files/releases/download/0.108.0/MRA.Auto.Updater.zip"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="800px"
+                style="--w: 30px"
+                height="800px"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M17 12L12 17M12 17L7 12M12 17V4M17 20H7"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </svg>
+              <span class="button-text">Download</span>
+            </a>
+            <!-- <a href="#" class="button accent transparent" download
+              >Download Zip</a
+            > -->
+          </div>
           <div class="download-button">
             <span class="download-text">Microsoft Store (v0.103):</span>
             <script
